@@ -1,9 +1,9 @@
 [Stats]
-EditorSecs=77436
-DesignerSecs=5087
+EditorSecs=77439
+DesignerSecs=5232
 InspectorSecs=4222
 CompileSecs=20685108
-OtherSecs=24222
+OtherSecs=24223
 StartTime=07/04/2015 13:17:38
 RealKeys=0
 EffectiveKeys=0
