@@ -161,6 +161,7 @@ ndo
 
 
 X.XX - YYYY
+- Permantenly removed theme logic as adviced in 11.30.
 
 11.31 - 2017/11/17
 - Reduced donator reminder frequency.
